--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- synaptic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
     <!-- monkey coder -->
-    <script type="module" src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <div class="w3-row">
