begin update draw elite table

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <!-- Elite -->
         <div class="w3-col m8 l9">
-            <table class="w3-table w3-striped w3-white" id="eliteMonkeys">
+            <table class="w3-table w3-tiny w3-striped w3-white" id="eliteMonkeys">
                 <thead>
                     <tr>
                         <th>type</th>
