--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
             </form>
         </div>
         <!-- Interpreter -->
-        <div class="w3-col m8 l9">
-            
+        <div class="w3-col m8 l9 w3-padding">
+            <div class="w3-third w3-container"></div>
+            <div class="w3-third w3-container" id="bestCode"></div>
+            <div class="w3-third w3-container"></div>
         </div>
     </div>
     <div class="w3-row">
@@ -61,10 +63,10 @@
         </div>
         <!-- Elite -->
         <div class="w3-col m8 l9">
-            <table class="w3-table w3-tiny w3-striped w3-white" id="eliteMonkeys">
+            <table class="w3-table w3-small w3-striped w3-white" id="eliteMonkeys">
                 <thead>
                     <tr>
-                        <th>type</th>
+                        <th>id</th>
                         <th>code</th>
                         <th>error</th>
                     </tr>
